# ptmk_test

./: .gitignore  Makefile  README.md  pyproject.toml
ptmk_test/: args_processor.py  args_validator.py  cli.py  config.py  db.py  db_connection.py  fake_employee_generator.py  mode_1.py  mode_2.py  mode_3.py  mode_4.py  mode_5.py  models.py
ptmk_test/modes/: mode_1.py  mode_2.py  mode_3.py  mode_4.py  mode_5.py  mode_selector.py
ptmk_test/scripts/: ptmk_app.py
