[tool.poetry]
name = "ptmk-test"
version = "0.1.0"
description = ""
authors = ["Ulyana Krasilnikova <b-lack-u@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
