[tool.poetry]
name = "ptmk-test"
version = "0.1.0"
description = "Tool for managing the employee database."
authors = ["Ulyana Krasilnikova <b-lack-u@yandex.ru>"]
readme = "README.md"
repository = "https://github.com/illata1998/ptmk_test"

[tool.poetry.scripts]
ptmk-app = 'ptmk_test.scripts.ptmk_app:main'


[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.10"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
